# django-start-template

./: .djlintrc  pyproject.toml
conf/: settings.py  urls.py
static/js/: htmx_messages.js
templates/: base.html  home.html
templates/htmx_messages/: messages.html
templates/includes/: navbar.html
templates/layouts/: blank.html
