[project]
name = "django-start-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-crispy-forms>=2.3",
    "django>=5.1.4",
    "crispy-bootstrap5>=2024.10",
    "django-htmx>=1.21.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
